fixes zoom on mobile

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ html {
 }
 
 .buttons {
-  width: 200px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
